## Process this file with automake to produce Makefile.in

## This script is free software; you can distribute it and/or modify it
## under the terms of the GNU GPL.  See the file COPYING.

## Copyright (C) 2003, 2004 Joost van Baal

PACKAGE = @PACKAGE_TARNAME@
docdir = $(datadir)/doc/$(PACKAGE)

SILENT = @SILENT@


## CRM autoconfiscation hackers: be sure to keep this list in sync with
## the "docs" list in tools/prebootstrap

doc_DATA = classify_details.txt \
	COLOPHON.txt \
	CRM114_Mailfilter_HOWTO.txt \
	FAQ.txt \
	inoc_passwd.txt \
	INTRO.txt \
	knownbugs.txt \
	procmailrc.recipe \
	QUICKREF.txt \
	reto_procmail_recipe.recipe \
	things_to_do.txt \
	README \
	VT_generic_Vector_Tokenization.txt
 

EXTRA_DIST = $(doc_DATA)


DISTCLEANFILES = 
CLEANFILES = *~ *.bak



