## Process this file with automake to produce Makefile.in

## $Id: Makefile.am,v 1.7 2004/04/21 03:37:19 popovich Exp $

## This script is free software; you can distribute it and/or modify it
## under the terms of the GNU GPL.  See the file COPYING.

## Copyright (C) 2003, 2004 Joost van Baal

PACKAGE = @PACKAGE_TARNAME@

cdir = $(libexecdir)/$(PACKAGE)

c_SCRIPTS = \
 classifymail.crm \
 mailfilter.cf \
 mailfilter.crm \
 rewriteutil.crm

EXTRA_DIST = mailfilter.cf


DISTCLEANFILES = 
CLEANFILES = *~ *.bak



